[LOH] TopNavBar fixes : feedback link, no more clock on small devices, menu can be opened on small screens

--- a/app/client/stylesheets/common/navbar.less
+++ b/app/client/stylesheets/common/navbar.less
@@ -10,6 +10,10 @@
   }
 
   .common-nav-bar {
+    .feedback{
+      margin-top : 10px;
+    }
+
     .lastUpdate {
       margin-top: 10px;
       background: rgba(57, 241, 44, 0);
